# SPOT

./: CMakeLists.txt  LICENSE  README.md
cmake/: fetch_SDL3.cmake  fetch_linalg.cmake
examples/: CMakeLists.txt
examples/tennis/: tennis.cpp
include/spot/: colour.hpp  font.hpp  graphics.hpp  graphics_context.hpp  keyboard.hpp  maths.hpp  sdl_utils.hpp  spot.hpp  spritesheet.hpp  texture.hpp
src/: colour.cpp  font.cpp  graphics_context.cpp  keyboard.cpp  maths.cpp  sdl_utils.cpp  spot.cpp  spritesheet.cpp  texture.cpp
